      LOB objects detected in a result set to be forced into OracleBinary
      so that the LOB is read() automatically, if no typemap was present
      (i.e., if a textual execute() was issued).
    - mod operator '%' produces MOD [ticket:624]
    - converts cx_oracle datetime objects to Python datetime.datetime when
      Python 2.3 used [ticket:542]
- postgres
    - fixed escaping of the modulo operator [ticket:624]
    - added support for reflection of domains [ticket:570]
    - types which are missing during reflection resolve to Null type
      instead of raising an error
    - the fix in "schema" above fixes reflection of foreign keys from an
      alt-schema table to a public schema table
- sqlite
    - rearranged dialect initialization so it has time to warn about pysqlite1
      being too old.
    - sqlite better handles datetime/date/time objects mixed and matched
      with various Date/Time/DateTime columns
    - string PK column inserts dont get overwritten with OID [ticket:603] 

- mssql
    - fix port option handling for pyodbc [ticket:634]
    - now able to reflect start and increment values for identity columns
    - preliminary support for using scope_identity() with pyodbc
    
0.3.8
- engines
    - added detach() to Connection, allows underlying DBAPI connection
      to be detached from its pool, closing on dereference/close()
      instead of being reused by the pool.
    - added invalidate() to Connection, immediately invalidates the
      Connection and its underlying DBAPI connection.
- sql
    - _Label class overrides compare_self to return its ultimate
      object. meaning, if you say someexpr.label('foo') == 5, it
      produces the correct "someexpr == 5".
    - _Label propigates "_hide_froms()" so that scalar selects
      behave more properly with regards to FROM clause #574 
    - fix to long name generation when using oid_column as an order by
      (oids used heavily in mapper queries)