@@ -108,6 +108,7 @@
     - mod operator '%' produces MOD [ticket:624]
     - converts cx_oracle datetime objects to Python datetime.datetime when
       Python 2.3 used [ticket:542]
+    - fixed unicode conversion in Oracle TEXT type
 - postgres
     - fixed escaping of the modulo operator [ticket:624]
     - added support for reflection of domains [ticket:570]
